--- a/package.json
+++ b/package.json
@@ -4,23 +4,40 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier --config ./.prettierrc.json .  --write"
+    "format": "prettier --config ./.prettierrc .  --write"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@mdi/font": "^6.6.96",
+    "roboto-fontface": "*",
+    "vue": "^3.2.33",
+    "vuetify": "^3.0.0-beta.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
-    "vite": "^2.9.7",
+    "@types/node": "^17.0.31",
+    "@types/webfontloader": "^1.6.34",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "eslint": "^8.14.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^8.7.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.6.4",
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "vite": "^2.9.8",
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
