--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mdi/font": "^6.6.96",
     "roboto-fontface": "*",
     "vue": "^3.2.33",
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.0.15",
     "vuetify": "^3.0.0-beta.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@types/node": "^17.0.31",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
