--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "format": "prettier --config ./.prettierrc .  --write"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
+    "@casl/ability": "^5.4.3",
     "@mdi/font": "^6.6.96",
+    "@vue/apollo-composable": "^4.0.0-alpha.17",
+    "@vue/apollo-option": "^4.0.0-alpha.17",
+    "graphql": "^16.5.0",
+    "graphql-type-json": "^0.3.2",
     "roboto-fontface": "*",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.10",
@@ -20,15 +26,20 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@rollup/plugin-graphql": "^1.1.0",
     "@types/node": "^17.0.31",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-vue": "^2.3.2",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.6.2",
@@ -37,9 +48,6 @@
     "typescript": "^4.6.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^2.9.8",
-    "@vitejs/plugin-vue": "^2.3.2",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
