--- a/package.json
+++ b/package.json
@@ -11,31 +11,38 @@
     "format": "prettier --config ./.prettierrc .  --write"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.2",
-    "@casl/ability": "^5.4.3",
-    "@mdi/font": "^6.6.96",
+    "@apollo/client": "^3.6.6",
+    "@casl/ability": "^5.4.4",
+    "@casl/vue": "^2.1.2",
+    "@mdi/font": "^6.7.96",
     "@vue/apollo-composable": "^4.0.0-alpha.17",
     "@vue/apollo-option": "^4.0.0-alpha.17",
     "graphql": "^16.5.0",
     "graphql-type-json": "^0.3.2",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "roboto-fontface": "*",
-    "vue": "^3.2.33",
+    "vee-validate": "^4.5.11",
+    "vue": "^3.2.37",
+    "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15",
-    "vuetify": "^3.0.0-beta.1",
-    "webfontloader": "^1.6.28"
+    "vuetify": "^3.0.0-beta.3",
+    "webfontloader": "^1.6.28",
+    "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.41",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "@vitejs/plugin-vue": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/apollo-util": "^4.0.0-alpha.17",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
-    "eslint": "^8.14.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -43,12 +50,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.6.2",
-    "sass": "^1.51.0",
-    "sass-loader": "^12.6.0",
-    "typescript": "^4.6.4",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "typescript": "^4.7.3",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^2.9.8",
-    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vite": "^2.9.10",
+    "vue-cli-plugin-vuetify": "~2.5.1",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
