--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "format": "prettier --config ./.prettierrc .  --write"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.6",
+    "@apollo/client": "^3.6.7",
     "@casl/ability": "^5.4.4",
     "@casl/vue": "^2.1.2",
     "@mdi/font": "^6.7.96",
     "@vue/apollo-composable": "^4.0.0-alpha.17",
     "@vue/apollo-option": "^4.0.0-alpha.17",
+    "@vueuse/head": "^0.7.6",
+    "dayjs": "^1.11.3",
     "graphql": "^16.5.0",
     "graphql-type-json": "^0.3.2",
     "pinia": "^2.0.14",
@@ -26,7 +28,7 @@
     "vue": "^3.2.37",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.15",
+    "vue-router": "^4.0.16",
     "vuetify": "^3.0.0-beta.3",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.4"
@@ -34,7 +36,7 @@
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/node": "^17.0.41",
+    "@types/node": "^17.0.42",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
@@ -54,8 +56,7 @@
     "sass-loader": "^13.0.0",
     "typescript": "^4.7.3",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^2.9.10",
-    "vue-cli-plugin-vuetify": "~2.5.1",
+    "vite": "^2.9.12",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
