--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --config ./.prettierrc .  --write"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.7",
+    "@apollo/client": "^3.6.8",
     "@casl/ability": "^5.4.4",
     "@casl/vue": "^2.1.2",
     "@mdi/font": "^6.7.96",
@@ -29,30 +29,32 @@
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16",
-    "vuetify": "^3.0.0-beta.3",
+    "vuetify": "^3.0.0-beta.4",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/node": "^17.0.42",
+    "@types/node": "^18.0.0",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/apollo-util": "^4.0.0-alpha.17",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.11",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
-    "prettier": "^2.6.2",
-    "typescript": "^4.7.3",
+    "prettier": "^2.7.1",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^2.9.12",
     "vuetify-loader": "^2.0.0-alpha.9"
