add cypress, faker libs

--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier --config ./.prettierrc .  --write"
+    "format": "prettier --config ./.prettierrc .  --write",
+    "cy:run": "cypress run --config viewportWidth=1464",
+    "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
+    "cy:open": "cypress open --config viewportWidth=1464",
+    "cy:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.8",
+    "@apollo/client": "^3.6.9",
     "@casl/ability": "^5.4.4",
     "@casl/vue": "^2.1.2",
     "@mdi/font": "^6.7.96",
-    "@vue/apollo-composable": "^4.0.0-alpha.17",
-    "@vue/apollo-option": "^4.0.0-alpha.17",
+    "@vue/apollo-composable": "^4.0.0-alpha.18",
+    "@vue/apollo-option": "^4.0.0-alpha.18",
     "@vueuse/head": "^0.7.6",
     "dayjs": "^1.11.3",
     "graphql": "^16.5.0",
@@ -34,16 +38,18 @@
     "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/node": "^18.0.0",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/apollo-util": "^4.0.0-alpha.17",
+    "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.11",
+    "cypress": "^10.2.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
@@ -52,7 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
-    "sass": "^1.52.2",
+    "sass": "^1.53.0",
     "sass-loader": "^13.0.0",
     "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
