--- a/package.json
+++ b/package.json
@@ -9,60 +9,61 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
-    "cy:run": "cypress run --config viewportWidth=1464",
+    "cy:run": "cypress run --config viewportWidth=1440",
     "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
-    "cy:open": "cypress open --config viewportWidth=1464",
+    "cy:open": "cypress open --config viewportWidth=1440",
     "cy:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@casl/ability": "^5.4.4",
     "@casl/vue": "^2.1.2",
-    "@mdi/font": "^6.7.96",
+    "@mdi/font": "^6.9.96",
+    "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.18",
     "@vue/apollo-option": "^4.0.0-alpha.18",
     "@vueuse/head": "^0.7.6",
     "dayjs": "^1.11.3",
     "graphql": "^16.5.0",
     "graphql-type-json": "^0.3.2",
-    "pinia": "^2.0.14",
-    "pinia-plugin-persistedstate": "^1.6.1",
+    "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^1.6.3",
     "roboto-fontface": "*",
-    "vee-validate": "^4.5.11",
+    "vee-validate": "^4.6.1",
     "vue": "^3.2.37",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.16",
-    "vuetify": "^3.0.0-beta.4",
+    "vue-router": "^4.1.2",
+    "vuetify": "^3.0.0-beta.5",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@intlify/vite-plugin-vue-i18n": "^5.0.0",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.0.4",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "@vitejs/plugin-vue": "^3.0.0",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.11",
-    "cypress": "^10.2.0",
-    "eslint": "^8.18.0",
+    "cypress": "^10.3.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.0",
     "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^2.9.12",
+    "vite": "^3.0.0",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
