--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     /* Modules */
     "module": "ESNext",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",
