--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_GRAPHQL_HTTP=http://localhost:4090/api
 VITE_GRAPHQL_SERVER=http://localhost:4090/
 VITE_APP_NAME=Rent
+VITE_TINYMCE_KEY=l1lcgeqkl3vog7mmltm0s6vvgm0y3o8haz1cctyeedzwky59
 VITE_GOOGLE_API_KEY=AIzaSyADlQ1vkeQgqm6Y711lge42Bp20ftVLgWc
