--- a/package.json
+++ b/package.json
@@ -18,40 +18,42 @@
     "@apollo/client": "^3.6.9",
     "@casl/ability": "^6.0.0",
     "@casl/vue": "^2.1.3",
+    "@fawmi/vue-google-maps": "^0.9.72",
     "@mdi/font": "^7.0.96",
+    "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
-    "@vueuse/head": "^0.7.8",
+    "@vueuse/head": "^0.7.9",
     "dayjs": "^1.11.4",
     "graphql": "^16.5.0",
     "graphql-type-json": "^0.3.2",
     "pinia": "^2.0.17",
-    "pinia-plugin-persistedstate": "^1.6.3",
+    "pinia-plugin-persistedstate": "^2.1.0",
     "roboto-fontface": "*",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
     "vue-3-breadcrumbs": "^2.0.0",
-    "vue-i18n": "^9.1.10",
+    "vue-i18n": "^9.2.0",
     "vue-router": "^4.1.3",
     "vuetify": "^3.0.0-beta.6",
     "webfontloader": "^1.6.28",
-    "yup": "^1.0.0-beta.4",
-    "@tinymce/tinymce-vue": "^5.0.0"
+    "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
     "@intlify/vite-plugin-vue-i18n": "^5.0.1",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/node": "^18.6.2",
+    "@types/google.maps": "^3.49.2",
+    "@types/node": "^18.6.3",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.11",
-    "cypress": "^10.3.1",
-    "eslint": "^8.20.0",
+    "cypress": "^10.4.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -59,7 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
-    "sass": "^1.54.0",
+    "sass": "^1.54.2",
     "sass-loader": "^13.0.2",
     "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
