--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
+    "postinstall": "patch-package",
     "cy:run": "cypress run --config viewportWidth=1440",
     "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
     "cy:open": "cypress open --config viewportWidth=1440",
@@ -24,36 +25,37 @@
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
     "@vueuse/head": "^0.7.9",
-    "dayjs": "^1.11.4",
-    "graphql": "^16.5.0",
+    "dayjs": "^1.11.5",
+    "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
-    "pinia": "^2.0.17",
-    "pinia-plugin-persistedstate": "^2.1.0",
+    "pinia": "^2.0.19",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "roboto-fontface": "*",
-    "vee-validate": "^4.6.2",
+    "vee-validate": "^4.6.6",
     "vue": "^3.2.37",
     "vue-3-breadcrumbs": "^2.0.0",
-    "vue-i18n": "^9.2.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
-    "vuetify": "^3.0.0-beta.7",
+    "vuetify": "^3.0.0-beta.8",
     "webfontloader": "^1.6.28",
+    "patch-package": "^6.4.7",
     "yup": "^1.0.0-beta.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0",
-    "@intlify/vite-plugin-vue-i18n": "^5.0.1",
+    "@faker-js/faker": "^7.4.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/google.maps": "^3.49.2",
-    "@types/node": "^18.6.3",
+    "@types/node": "^18.7.6",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.11",
-    "cypress": "^10.4.0",
-    "eslint": "^8.21.0",
+    "cypress": "^10.6.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -61,11 +63,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
-    "sass": "^1.54.2",
+    "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^3.0.4",
+    "vite": "^3.0.8",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
