--- a/package.json
+++ b/package.json
@@ -29,28 +29,28 @@
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
-    "pinia": "^2.0.19",
+    "patch-package": "^6.4.7",
+    "pinia": "^2.0.20",
     "pinia-plugin-persistedstate": "^2.1.1",
     "roboto-fontface": "*",
     "vee-validate": "^4.6.6",
     "vue": "^3.2.37",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.3",
-    "vuetify": "^3.0.0-beta.8",
+    "vue-router": "^4.1.4",
+    "vuetify": "^3.0.0-beta.9",
     "webfontloader": "^1.6.28",
-    "patch-package": "^6.4.7",
-    "yup": "^1.0.0-beta.4"
+    "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/google.maps": "^3.49.2",
-    "@types/node": "^18.7.6",
+    "@types/node": "^18.7.12",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -62,13 +62,14 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.7.1",
-    "sass": "^1.54.4",
+    "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^3.0.8",
+    "vite": "^3.0.9",
+    "vue-eslint-parser": "^9.0.3",
     "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
