--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "serve": "vite preview",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
     "postinstall": "patch-package",
     "cy:run": "cypress run --config viewportWidth=1440",
     "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
     "cy:open": "cypress open --config viewportWidth=1440",
-    "cy:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667"
+    "cy:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
+    "generate": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@casl/ability": "^6.0.0",
-    "@casl/vue": "^2.1.3",
-    "@fawmi/vue-google-maps": "^0.9.72",
+    "@casl/ability": "^6.1.1",
+    "@casl/vue": "^2.2.0",
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@mdi/font": "^7.0.96",
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
@@ -30,32 +31,34 @@
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "patch-package": "^6.4.7",
-    "pinia": "^2.0.20",
+    "pinia": "^2.0.21",
     "pinia-plugin-persistedstate": "^2.1.1",
     "roboto-fontface": "*",
-    "vee-validate": "^4.6.6",
-    "vue": "^3.2.37",
+    "vee-validate": "^4.6.7",
+    "vue": "^3.2.38",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.4",
-    "vuetify": "^3.0.0-beta.9",
+    "vue-router": "^4.1.5",
+    "vuetify": "^3.0.0-beta.10",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
+    "@faker-js/faker": "^7.5.0",
+    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/typescript": "^2.7.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/google.maps": "^3.49.2",
-    "@types/node": "^18.7.12",
+    "@types/google.maps": "^3.50.0",
+    "@types/node": "^18.7.14",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
-    "cypress": "^10.6.0",
+    "vite-plugin-vuetify": "1.0.0-alpha.15",
+    "cypress": "^10.7.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
@@ -64,12 +67,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.7.1",
-    "sass": "^1.54.5",
+    "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
     "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^3.0.9",
-    "vue-eslint-parser": "^9.0.3",
-    "vuetify-loader": "^2.0.0-alpha.9"
+    "vue-eslint-parser": "^9.0.3"
   }
 }
