Ability to control shown data table items via config file

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ VITE_GRAPHQL_SERVER=http://localhost:4090/
 VITE_APP_NAME=Rent
 VITE_TINYMCE_KEY=l1lcgeqkl3vog7mmltm0s6vvgm0y3o8haz1cctyeedzwky59
 VITE_GOOGLE_API_KEY=AIzaSyADlQ1vkeQgqm6Y711lge42Bp20ftVLgWc
+VITE_DATATABLE_ITEMS=10
