--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "patch-package": "^6.4.7",
-    "pinia": "^2.0.21",
-    "pinia-plugin-persistedstate": "^2.1.1",
+    "pinia": "^2.0.22",
+    "pinia-plugin-persistedstate": "^2.2.0",
     "roboto-fontface": "*",
     "vee-validate": "^4.6.7",
-    "vue": "^3.2.38",
+    "vue": "^3.2.39",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
@@ -50,14 +50,13 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/google.maps": "^3.50.0",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.7.16",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-vue": "^3.1.0",
     "@vue/apollo-util": "^4.0.0-alpha.18",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "vite-plugin-vuetify": "1.0.0-alpha.15",
+    "@vue/eslint-config-typescript": "^11.0.1",
     "cypress": "^10.7.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
@@ -67,11 +66,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.7.1",
-    "sass": "^1.54.8",
+    "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
-    "typescript": "^4.8.2",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^3.0.9",
-    "vue-eslint-parser": "^9.0.3"
+    "typescript": "^4.8.3",
+    "unplugin-auto-import": "^0.11.2",
+    "vite": "^3.1.0",
+    "vite-plugin-vuetify": "1.0.0-alpha.16",
+    "vue-eslint-parser": "^9.1.0"
   }
 }
