Add stylelint packages

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
-    "@vueuse/head": "^0.7.9",
+    "@vueuse/head": "^0.7.10",
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
@@ -44,6 +44,7 @@
     "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
+    "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@faker-js/faker": "^7.5.0",
     "@graphql-codegen/cli": "2.12.0",
     "@graphql-codegen/typescript": "^2.7.3",
@@ -71,6 +72,15 @@
     "typescript": "^4.8.3",
     "unplugin-auto-import": "^0.11.2",
     "vite": "^3.1.0",
+    "postcss-html": "^1.5.0",
+    "stylelint": "^14.11.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-prettier": "^2.0.0",
+    "vite-plugin-stylelint": "^3.0.7",
     "vite-plugin-vuetify": "1.0.0-alpha.16",
     "vue-eslint-parser": "^9.1.0"
   }
