--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
-    "@vueuse/head": "^0.7.10",
+    "@vueuse/head": "^0.7.11",
+    "cropperjs": "^1.5.12",
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
@@ -39,40 +40,38 @@
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
-    "vuetify": "^3.0.0-beta.10",
+    "vuedraggable": "^4.1.0",
+    "vuetify": "^3.0.0-beta.11",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
-    "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@faker-js/faker": "^7.5.0",
     "@graphql-codegen/cli": "2.12.0",
     "@graphql-codegen/typescript": "^2.7.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/google.maps": "^3.50.0",
-    "@types/node": "^18.7.16",
+    "@types/google.maps": "^3.50.1",
+    "@types/node": "^18.7.18",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.1",
-    "cypress": "^10.7.0",
-    "eslint": "^8.22.0",
+    "cypress": "^10.8.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
+    "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
-    "typescript": "^4.8.3",
-    "unplugin-auto-import": "^0.11.2",
-    "vite": "^3.1.0",
-    "postcss-html": "^1.5.0",
     "stylelint": "^14.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -80,8 +79,11 @@
     "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-prettier": "^2.0.0",
+    "typescript": "^4.8.3",
+    "unplugin-auto-import": "^0.11.2",
+    "vite": "^3.1.1",
     "vite-plugin-stylelint": "^3.0.7",
-    "vite-plugin-vuetify": "1.0.0-alpha.16",
+    "vite-plugin-vuetify": "1.0.0-alpha.17",
     "vue-eslint-parser": "^9.1.0"
   }
 }
