--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "vite",
     "cypress": "vite --mode testing --port 1500",
     "serve": "vite preview",
-    "build": "vite build",
+    "vite:build": "vite build",
+    "build": "cross-env NODE_ENV=productionvite-ssg build --debug",
     "preview": "vite preview",
+    "preview-https": "serve dist",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
     "postinstall": "patch-package",
@@ -19,14 +21,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@casl/ability": "^6.1.1",
+    "@casl/ability": "^6.2.0",
     "@casl/vue": "^2.2.0",
     "@fawmi/vue-google-maps": "^0.9.79",
-    "@mdi/font": "^7.0.96",
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
-    "@vueuse/head": "^0.7.11",
+    "@vueuse/head": "^0.7.12",
     "cropperjs": "^1.5.12",
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
@@ -35,7 +36,7 @@
     "pinia": "^2.0.22",
     "pinia-plugin-persistedstate": "^2.2.0",
     "roboto-fontface": "*",
-    "vee-validate": "^4.6.7",
+    "vee-validate": "^4.6.9",
     "vue": "^3.2.39",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
@@ -47,19 +48,20 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/cli": "2.12.1",
     "@graphql-codegen/typescript": "^2.7.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@mdi/js": "^7.0.96",
     "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/google.maps": "^3.50.1",
     "@types/node": "^18.7.18",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/apollo-util": "^4.0.0-alpha.18",
-    "@vue/eslint-config-typescript": "^11.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "cypress": "^10.8.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
@@ -67,12 +69,12 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vue": "^9.5.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9",
+    "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
-    "stylelint": "^14.11.0",
+    "stylelint": "^14.12.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
@@ -81,9 +83,10 @@
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.8.3",
     "unplugin-auto-import": "^0.11.2",
-    "vite": "^3.1.1",
+    "vite": "^3.1.3",
     "vite-plugin-stylelint": "^3.0.7",
     "vite-plugin-vuetify": "1.0.0-alpha.17",
+    "vite-ssg": "^0.20.2",
     "vue-eslint-parser": "^9.1.0"
   }
 }
