--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@casl/ability": "^6.2.0",
+    "@casl/ability": "^6.3.0",
     "@casl/vue": "^2.2.0",
     "@fawmi/vue-google-maps": "^0.9.79",
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
+    "@vueuse/core": "^9.3.0",
     "@vueuse/head": "^0.7.12",
     "cropperjs": "^1.5.12",
     "dayjs": "^1.11.5",
@@ -48,22 +49,22 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.12.1",
+    "@graphql-codegen/cli": "2.12.2",
     "@graphql-codegen/typescript": "^2.7.3",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.2",
     "@mdi/js": "^7.0.96",
     "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@rollup/plugin-graphql": "^1.1.0",
-    "@types/google.maps": "^3.50.1",
-    "@types/node": "^18.7.18",
-    "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@types/google.maps": "^3.50.2",
+    "@types/node": "^18.7.23",
+    "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.2",
     "cypress": "^10.8.0",
-    "eslint": "^8.23.1",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
