--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+VITE_BASE_URL=http://localhost:5173
 VITE_GRAPHQL_HTTP=http://localhost:4090/api
 VITE_GRAPHQL_SERVER=http://localhost:4090/
 VITE_APP_NAME=Rent
