--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@casl/ability": "^6.3.0",
+    "@casl/ability": "^6.3.1",
     "@casl/vue": "^2.2.0",
     "@fawmi/vue-google-maps": "^0.9.79",
     "@tinymce/tinymce-vue": "^5.0.0",
@@ -38,7 +38,7 @@
     "pinia-plugin-persistedstate": "^2.2.0",
     "roboto-fontface": "*",
     "vee-validate": "^4.6.9",
-    "vue": "^3.2.39",
+    "vue": "^3.2.40",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.13.0",
+    "@graphql-codegen/cli": "2.13.1",
     "@graphql-codegen/typescript": "^2.7.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@mdi/js": "^7.0.96",
@@ -64,6 +64,7 @@
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.2",
     "cypress": "^10.9.0",
+    "cypress-vite": "^1.2.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
@@ -75,16 +76,16 @@
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
-    "stylelint": "^14.12.1",
+    "stylelint": "^14.13.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.8.3",
+    "typescript": "^4.8.4",
     "unplugin-auto-import": "^0.11.2",
-    "vite": "^3.1.3",
+    "vite": "^3.1.4",
     "vite-plugin-stylelint": "^3.0.7",
     "vite-plugin-vuetify": "1.0.0-alpha.17",
     "vite-ssg": "^0.20.2",
