Add listing section add/update property

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
     "postinstall": "patch-package",
-    "cy:run": "cypress run --config viewportWidth=1440",
+    "cy:run": "cypress run --config viewportWidth=1920,viewportHeight=1080",
     "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
-    "cy:open": "cypress open --config viewportWidth=1440",
+    "cy:open": "cypress open --config viewportWidth=1920,viewportHeight=1080",
     "cy:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
     "generate": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "^3.7.0",
     "@casl/ability": "^6.3.1",
     "@casl/vue": "^2.2.0",
     "@fawmi/vue-google-maps": "^0.9.79",
@@ -28,7 +28,7 @@
     "@types/graphql": "^14.5.0",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
     "@vueuse/core": "^9.3.0",
-    "@vueuse/head": "^0.7.12",
+    "@vueuse/head": "^0.8.0",
     "cropperjs": "^1.5.12",
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
@@ -37,7 +37,7 @@
     "pinia": "^2.0.22",
     "pinia-plugin-persistedstate": "^2.2.0",
     "roboto-fontface": "*",
-    "vee-validate": "^4.6.9",
+    "vee-validate": "^4.6.10",
     "vue": "^3.2.40",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
@@ -55,14 +55,16 @@
     "@mdi/js": "^7.0.96",
     "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@rollup/plugin-graphql": "^1.1.0",
+    "@types/apollo-upload-client": "^17.0.1",
     "@types/google.maps": "^3.50.2",
-    "@types/node": "^18.7.23",
+    "@types/node": "^18.8.0",
     "@types/webfontloader": "^1.6.35",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
-    "@vitejs/plugin-vue": "^3.1.0",
+    "@vitejs/plugin-vue": "^3.1.2",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "apollo-upload-client": "^17.0.0",
     "cypress": "^10.9.0",
     "cypress-vite": "^1.2.0",
     "eslint": "^8.24.0",
