--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "cypress": "vite --mode testing --port 1500",
     "serve": "vite preview",
     "vite:build": "vite build",
-    "build": "cross-env NODE_ENV=productionvite-ssg build --debug",
-    "preview": "vite preview",
-    "preview-https": "serve dist",
+    "ssg:build": "vite-ssg build --debug",
+    "vite:preview": "vite preview",
+    "ssg:preview-https": "serve dist",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier --config ./.prettierrc .  --write",
-    "postinstall": "patch-package",
+    "postinstall": "esmo patches/patch.ts",
     "cy:run": "cypress run --config viewportWidth=1920,viewportHeight=1080",
     "cy:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
     "cy:open": "cypress open --config viewportWidth=1920,viewportHeight=1080",
@@ -26,9 +26,9 @@
     "@fawmi/vue-google-maps": "^0.9.79",
     "@tinymce/tinymce-vue": "^5.0.0",
     "@types/graphql": "^14.5.0",
-    "@vue/apollo-composable": "^4.0.0-alpha.19",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vueuse/core": "^9.3.0",
-    "@vueuse/head": "^0.8.0",
+    "@vueuse/head": "^0.9.7",
     "cropperjs": "^1.5.12",
     "dayjs": "^1.11.5",
     "graphql": "^16.6.0",
@@ -41,26 +41,27 @@
     "vue": "^3.2.40",
     "vue-3-breadcrumbs": "^2.0.0",
     "vue-i18n": "^9.2.2",
+    "react": "^18.1.0",
     "vue-router": "^4.1.5",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.0.0-beta.11",
+    "vuetify": "^3.0.0-beta.13",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.13.1",
+    "@graphql-codegen/cli": "2.13.5",
     "@graphql-codegen/typescript": "^2.7.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@mdi/js": "^7.0.96",
     "@modyqyw/vite-plugin-eslint": "^2.0.9",
     "@rollup/plugin-graphql": "^1.1.0",
     "@types/apollo-upload-client": "^17.0.1",
-    "@types/google.maps": "^3.50.2",
-    "@types/node": "^18.8.0",
+    "@types/google.maps": "^3.50.3",
+    "@types/node": "^18.8.3",
     "@types/webfontloader": "^1.6.35",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/apollo-util": "^4.0.0-alpha.18",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -77,7 +78,8 @@
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
+    "esno": "^0.14.1",
+    "sass-loader": "^13.1.0",
     "stylelint": "^14.13.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -87,10 +89,10 @@
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.8.4",
     "unplugin-auto-import": "^0.11.2",
-    "vite": "^3.1.4",
+    "vite": "^3.1.6",
     "vite-plugin-stylelint": "^3.0.7",
     "vite-plugin-vuetify": "1.0.0-alpha.17",
-    "vite-ssg": "^0.20.2",
+    "vite-ssg": "^0.21.0",
     "vue-eslint-parser": "^9.1.0"
   }
 }
